# fastapi_assignment

./: README.md  brief.md  implementation_guide.md  readme.md  test.db  token.txt
blokid-backend/: .env  .env.example  .gitignore  pyproject.toml  requirements.txt
blokid-backend/app/: config.py  database.py  main.py
blokid-backend/app/models/: organization.py  user.py  website.py
blokid-backend/app/routers/: auth.py  organizations.py  users.py  websites.py
blokid-backend/app/schemas/: organization.py  user.py  website.py
blokid-backend/app/services/: auth_service.py  email_service.py  organization_service.py  permission_service.py  website_service.py
blokid-backend/app/utils/: common.py  dependencies.py  security.py
blokid-backend/tests/: conftest.py  test_auth.py  test_auth_routes.py  test_auth_service.py  test_config.py  test_database.py  test_dependencies.py  test_organization_model.py  test_organization_routes.py  test_organization_service.py  test_orgranization_schemas.py  test_permission_dependencies.py  test_permission_service.py  test_security.py  test_user_model.py  test_user_schemas.py  test_website_model.py  test_website_schemas.py  test_website_service.py
