[project]
name = "blokid-backend"
version = "0.1.0"
description = "BlokID Backend"
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=7.0.0",
    "sqlalchemy>=2.0.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
